--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,17 @@
   width: 40%; 
   animation: rotar 2s linear infinite; /* animación de rotación */
 }
+.footer {
+  color: #fff;
+  font-weight: 800;
+  padding: 20px;
+  text-align: center;
+  position: absolute;
+  left: 0%;
+  bottom: 0;
+  width: 100%;
+  font-size: 10px;
+}
 
 @keyframes rotar {
   from {
